# wasdk-rust-sample

./: Cargo.toml
sample/: Cargo.toml  build.rs
sample/src/: main.rs
windows-app-sdk/: Cargo.toml  build.rs
windows-app-sdk/src/: lib.rs
windows-app-sdk/src/Microsoft/Windows/System/Power/: mod.rs
