[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-app-sdk = { path = "../windows-app-sdk" }

[dependencies.windows]
version = "0.43.0"
features = [
    "implement",
    "Foundation",
]
